--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-284.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇫🇷 法国-659.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.06MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-1.49MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇫🇷 法国-3.07MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇳 中国-6.11MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-831.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-281.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-299.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.20MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇩🇪 德国-2.17MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇩🇪 德国-631.5KB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇩🇪 德国-2.10MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇩🇪 德国-1.73MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇩🇪 德国-155.3KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇮🇹 意大利-718.0KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-284.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-659.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
       - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
       - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-284.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-659.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
       - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
       - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-284.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-659.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
       - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
       - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-284.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-659.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
       - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
       - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-284.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-659.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
       - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
       - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-284.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-659.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
       - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
       - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-284.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-659.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇫🇷 法国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
       - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
       - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
       - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
 rules:
