--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.11MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-831.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-281.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-299.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-1.20MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.17MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇩🇪 德国-631.5KB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇩🇪 德国-1.73MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇩🇪 德国-155.3KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇮🇹 意大利-718.0KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇺🇸 美国-459.9KB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇦 加拿大-1.69MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇦 加拿大-1.12MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: 138.2.71.189, port: 11188, type: vmess, uuid: 923f14b3-9131-46a9-ef9b-863e8d026078, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 138.2.71.189}}
+  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-1.84MB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-695.2KB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-874.1KB/s(Youtube:不良林), server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-929.8KB/s(Youtube:不良林), server: 172.99.188.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇸🇬 新加坡-1.27MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
-      - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-459.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-874.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-929.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
-      - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-459.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-874.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-929.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
-      - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-459.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-874.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-929.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
-      - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-459.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-874.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-929.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
-      - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-459.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-874.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-929.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
-      - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-459.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-874.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-929.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-299.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
-      - 🇩🇪 德国-631.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.73MB/s(Youtube:不良林)
-      - 🇩🇪 德国-155.3KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-718.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-459.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-874.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-929.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
